--- a/Source/Common/Common.csproj
+++ b/Source/Common/Common.csproj
@@ -5,6 +5,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>Erdmier.DomainCore.Common</RootNamespace>
+        <PackageId>Erdmier.DomainCore.Common</PackageId>
+        <Version>0.1.0</Version>
+        <Authors>JustinianErdmier</Authors>
+        <Title>DomainCore Common</Title>
+        <PackageProjectUrl>https://github.com/JustinErdmier/Erdmier.DomainCore</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/JustinErdmier/Erdmier.DomainCore</RepositoryUrl>
+        <PackageTags>domain-driven-design objects; ddd objects</PackageTags>
     </PropertyGroup>
 
 </Project>
