feat(🔖): update release metadata
Added a short description and copyright notice.

--- a/Source/DomainCore/DomainCore.csproj
+++ b/Source/DomainCore/DomainCore.csproj
@@ -13,6 +13,8 @@
         <PackageProjectUrl>https://github.com/JustinErdmier/Erdmier.DomainCore</PackageProjectUrl>
         <RepositoryUrl>https://github.com/JustinErdmier/Erdmier.DomainCore</RepositoryUrl>
         <PackageTags>domain-driven-design objects; ddd objects</PackageTags>
+        <Description>A small library for easily and quickly modeling your domain layer following DDD principles.</Description>
+        <Copyright>Copyright (c) Justin Erdmier 2024.</Copyright>
     </PropertyGroup>
 
 </Project>
